--- a/46-Callbacks/index-2.html
+++ b/46-Callbacks/index-2.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <link rel="shortcut icon" href="#">
-        <title>Asincronia y Event Loop</title>
+        <link rel="shortcut icon" href="#">
+        <title>Call Backs - Parte 2</title>
     </head>
     <body>
-        <script src="app.js">
+        <h1>Mas sobre Call Backs</h1>
 
-        </script>
+        <script src="app-2.js"></script>
     </body>
 </html>
