--- a/46-Callbacks/index.html
+++ b/46-Callbacks/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <link rel="shortcut icon" href="#">
-        <title>Asincronia y Event Loop</title>
+        <title>Callbacks</title>
     </head>
     <body>
-        <script src="app.js">
+        <h1>Callbacks</h1>
 
-        </script>
+        <script src="app.js"></script>
     </body>
 </html>
