--- a/47-Promesas/index.html
+++ b/47-Promesas/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="#">
         <title>Promesas</title>
     </head>
     <body>
         <h1>Promesas en JS</h1>
         
+        <script src="app.js"></script>
     </body>
 </html>
